Undo accordion header change to prevent overflow

--- a/src/scss/common/accordions.scss
+++ b/src/scss/common/accordions.scss
@@ -102,10 +102,6 @@
           line-height: inherit;
           margin-bottom: inherit;
         }
-
-        div > * {
-          width: max-content;
-        }
       }
 
       &:after {
